--- a/contents/input.less
+++ b/contents/input.less
@@ -1,30 +1,39 @@
-.input-container{
+.input-container {
   position: fixed;
   top: 15%;
-  left:20%;
-  width:60%;
+  left: 20%;
+  width: 60%;
   z-index: 9999;
-  box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+  box-shadow:
+    rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+    rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   border-radius: 15px;
-  background-image: linear-gradient(to bottom right, #FF61D2, #FE9090);
+  background-image: linear-gradient(to bottom right, #ff61d2, #fe9090);
+  .switch-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 15px;
+    border-radius: 15px;
+  }
 }
-.list-container{
+.list-container {
   z-index: 9999;
   position: fixed;
   top: 24%;
   left: 20%;
   width: 60%;
-  background-image: linear-gradient(to bottom right, #FF61D2, #FE9090);
+  background-image: linear-gradient(to bottom right, #ff61d2, #fe9090);
   border-radius: 15px;
   max-height: 350px;
   overflow-y: auto;
   overflow-x: hidden;
-  .list-item-title{
-    max-width:100%;
-    overflow:hidden;
-    text-overflow:ellipsis;
-    text-wrap:nowrap;
-    &:hover{
+  .list-item-title {
+    max-width: 100%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-wrap: nowrap;
+    &:hover {
       color: white;
       cursor: pointer;
     }
